<resources>
    <string name="app_name">Project02</string>
    <string name="mainExerciseHint">Enter Exercise</string>
    <string name="mainWeightHint">Enter Weight</string>
    <string name="mainRepsHint">Enter Reps</string>
    <string name="mainSubmitButton">Submit</string>
    <string name="noLogsMessage">No records, time to go to the gym</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">logout</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
</resources>
